--- a/api-key.html
+++ b/api-key.html
@@ -178,9 +178,19 @@
 
                   </div>
 
-                  <div class="col-md-6">
-                    <p class="small font-weight-bold mb-0">1 Credit per API request</p>
-                    <p class="small font-weight-bold mb-2">2 Credits per row of data in LinkDB</p>
+                    <div class="col-md-6">
+                    <!-- Text --> 
+                    <p class="small mb-0"> 
+                    <span class="text-info">1 Credit</span>
+                    per API request
+                    </p>
+
+                    <!-- Text --> 
+                    <p class="small mb-0"> 
+                      <span class="text-info">2 Credits</span>
+                      per row of data in LinkDB
+                    </p>
+
                   </div>
 
                   <div class="col-md-6">
@@ -431,7 +441,7 @@
   
                 <!-- Submit -->
                 <button class="btn btn-block btn-primary" type="submit">
-                  Continue with Startup Annual
+                  Continue with Startup Annually
                 </button>               
   
               </div>            
