--- a/pick-plan-review.html
+++ b/pick-plan-review.html
@@ -45,8 +45,8 @@
             </div>        
 
             <div class="col-4 py-6">
-              <span class="badge badge-pill badge-disable-soft ml-10">
-              <h5 class="text-muted mb-0 text-center">Review</h5>
+              <span class="badge badge-pill badge-success-soft ml-10">
+              <h5 class="mb-0 text-center">Review</h5>
               </span>
             </div>
 
@@ -64,10 +64,16 @@
 
             <!--Email-->
             <div class="form-group">
+
               <label for="email">
                 Email
-              </label>
-              <input type="email" class="form-control" id="email" placeholder="name@example.com">
+              </label>              
+
+              <div class="card-body bg-light border rounded">
+
+                <p class="mb-0">royyan@nubela.co</p>
+
+              </div>
             </div>
 
             <!-- Dropdown Select -->
@@ -186,7 +192,7 @@
 
               <!-- Submit -->
               <button class="btn btn-block btn-primary" type="submit">
-                Get Magic Login Link
+                Continue With Lite
               </button>
 
             </div>
@@ -263,7 +269,7 @@
 
               <!-- Submit -->
               <button class="btn btn-block btn-primary" type="submit">
-                Get Magic Login Link
+                Continue With Startup Annually
               </button>               
 
             </div>            
@@ -340,7 +346,7 @@
 
               <!-- Submit -->
               <button class="btn btn-block btn-primary" type="submit">
-                Get Magic Login Link
+                Continue With Startup Monthly
               </button>               
 
             </div>
@@ -432,7 +438,7 @@
 
               <!-- Submit -->
               <button class="btn btn-block btn-primary" type="submit">
-                Get Magic Login Link
+                Continue With Pro
               </button>
 
             </div>
@@ -524,7 +530,7 @@
 
               <!-- Submit -->
               <button class="btn btn-block btn-primary" type="submit">
-                Get Magic Login Link
+                Continue With XL
               </button>
 
             </div>             
