--- a/pricing.html
+++ b/pricing.html
@@ -303,7 +303,7 @@
               </p>                
 
                 <!-- Button -->
-                <a href="#!" class="btn btn-block btn-primary-soft mt-4">
+                <a href="pick-plan.html" class="btn btn-block btn-primary-soft mt-4">
                   Pick Plan <i class="fe fe-arrow-right ml-3"></i>
                 </a>
 
@@ -395,7 +395,7 @@
               </p>               
 
             <!-- Button -->
-            <a href="#!" class="btn btn-block btn-primary-soft mt-4">
+            <a href="pick-plan.html" class="btn btn-block btn-primary-soft mt-4">
               Pick Plan <i class="fe fe-arrow-right ml-3"></i>
             </a>
 
@@ -501,7 +501,7 @@
               </p>                 
 
             <!-- Button -->
-            <a href="#!" class="btn btn-block btn-white mt-4">
+            <a href="pick-plan.html" class="btn btn-block btn-white mt-4">
               Pick Plan <i class="fe fe-arrow-right ml-3"></i>
             </a>
 
@@ -607,7 +607,7 @@
               </p>             
 
             <!-- Button -->
-            <a href="#!" class="btn btn-block btn-primary-soft mt-4">
+            <a href="pick-plan.html" class="btn btn-block btn-primary-soft mt-4">
               Pick Plan <i class="fe fe-arrow-right ml-3"></i>
             </a>
 
