--- a/api-key.html
+++ b/api-key.html
@@ -194,7 +194,7 @@
                   </div>
 
                   <div class="col-md-6">
-                    <a href="pricing.html" type="button" class="top-up-btn btn btn-block btn-primary">
+                    <a href="#!" type="button" class="top-up-btn btn btn-block btn-primary">
                     Update Plan
                     </a>
                   </div>
