--- a/account-general.html
+++ b/account-general.html
@@ -93,8 +93,8 @@
                   <!-- List -->
                   <ul class="card-list list text-gray-700 mb-0">
                     <li class="list-item">
-                      <a class="list-link text-reset" href="billing-plans-and-payment.html">
-                        Plans & Payment
+                      <a class="list-link text-reset" href="billing-payment.html">
+                        Payment
                       </a>
                     </li>
                     <li class="list-item">
