--- a/linkdb.html
+++ b/linkdb.html
@@ -59,7 +59,7 @@
 
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" id="navbarDocumentation" data-toggle="dropdown" href="#" aria-haspopup="true" aria-expanded="false">
-                Linkedin API
+                Linkedin API <i class="fe fe-chevron-down"></i>
               </a>
               <div class="dropdown-menu dropdown-menu-md" aria-labelledby="navbarDocumentation">
                 <div class="list-group list-group-flush">
@@ -186,7 +186,7 @@
         </div>
 
       </div>
-    </nav>  
+    </nav>
 
     <!-- WELCOME
     ================================================== -->
