--- a/people-linkedin-profile.html
+++ b/people-linkedin-profile.html
@@ -31,8 +31,6 @@
 
     <!-- NAVBAR
     ================================================== -->
-    <!-- NAVBAR
-    ================================================== -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top bg-white border-bottom">
       <div class="container-fluid">
 
@@ -59,7 +57,7 @@
 
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" id="navbarDocumentation" data-toggle="dropdown" href="#" aria-haspopup="true" aria-expanded="false">
-                Linkedin API
+                Linkedin API <i class="fe fe-chevron-down"></i>
               </a>
               <div class="dropdown-menu dropdown-menu-md" aria-labelledby="navbarDocumentation">
                 <div class="list-group list-group-flush">
