--- a/linkdb.html
+++ b/linkdb.html
@@ -197,9 +197,7 @@
  
             <!-- Heading -->
             <h1 class="display-2 font-weight-bold">
-                <span class="badge badge-info-soft">
-                  <span class="h2 text-uppercase">BETA</span>
-                </span> LinkDB is a Postgresql database of <span class="text-primary">117M public Linkedin profiles</span>
+              LinkDB<sup><span class="h3 text-uppercase text-info font-weight-bold">BETA</span></sup> is a Postgresql database of <span class="text-primary">117M public Linkedin profiles</span>
             </h1>
 
             <p class="font-size-lg text-muted mb-7 mb-md-9">
