--- a/linkdb.html
+++ b/linkdb.html
@@ -197,7 +197,10 @@
  
             <!-- Heading -->
             <h1 class="display-2 font-weight-bold">
-              LinkDB<sup><span class="h3 text-uppercase text-info font-weight-bold">BETA</span></sup> is a Postgresql database of <span class="text-primary">117M public Linkedin profiles</span>
+              LinkDB<sup>
+                <span class="badge badge-pill badge-info-soft">
+                  <span class="h3 text-uppercase">BETA</span>                
+              </sup> is a Postgresql database of <span class="text-primary">117M public Linkedin profiles</span>
             </h1>
 
             <p class="font-size-lg text-muted mb-7 mb-md-9">
