--- a/linkdb-snapshots.html
+++ b/linkdb-snapshots.html
@@ -241,7 +241,7 @@
               <div class="col-4 col-lg-5">
                 
                 <!-- Image -->
-                <img src="Illustration_placement.png" alt="more prospect illustration" class="img-fluid">
+                <img src="assets/img/illustrations/people illustration.png" alt="more prospect illustration" class="img-fluid">
 
               </div>
               <div class="col-8 col-lg-7">
@@ -292,7 +292,7 @@
               <div class="col-4 col-lg-5">
                 
                 <!-- Image -->
-                <img src="Illustration_placement.png" alt="csv export illustration" class="img-fluid">
+                <img src="assets/img/illustrations/company worldwide illustration.png" alt="csv export illustration" class="img-fluid">
 
               </div>
               <div class="col-8 col-lg-7">
