--- a/linkdb.html
+++ b/linkdb.html
@@ -198,8 +198,7 @@
             <!-- Heading -->
             <h1 class="display-2 font-weight-bold">
               LinkDB<sup>
-                <span class="badge badge-pill badge-info-soft">
-                  <span class="h3 text-uppercase">BETA</span>                
+              <span class="h3 text-uppercase text-info">BETA</span>                
               </sup> is a Postgresql database of <span class="text-primary">117M public Linkedin profiles</span>
             </h1>
 
