--- a/linkdb-snapshots.html
+++ b/linkdb-snapshots.html
@@ -349,7 +349,7 @@
           <div class="col-12 col-md-10 col-lg-8 text-center">
 
             <!-- Heading -->
-            <h1 class="mb-10">
+            <h1 class="mb-6">
               Proxycurl is the canonical source of data for other major data resellers
             </h1>
 
@@ -360,7 +360,7 @@
           <div class="col-12 d-flex">
             
             <!-- Image -->
-            <img src="Illustration_landscape_placement.png" alt="more prospect illustration" class="img-fluid">
+            <img src="assets/img/illustrations/Proxycurl canonical source illustration.png" alt="more prospect illustration" class="img-fluid">
 
           </div>
 
@@ -380,7 +380,7 @@
             <div class="card shadow-light-lg mb-6 mb-md-0 lift lift-lg">
               
               <!-- Image -->
-              <img src="Illustration_placement.png" alt="..." class="card-img-top">
+              <img src="assets/img/illustrations/Linkedin guarantee illustration.png" alt="..." class="card-img-top">
 
               <!-- Shape -->
               <div class="position-relative">
