--- a/linkdb-snapshots.html
+++ b/linkdb-snapshots.html
@@ -409,7 +409,7 @@
             <div class="card shadow-light-lg mb-6 mb-md-0 lift lift-lg">
               
               <!-- Image -->
-              <img src="Illustration_placement.png" alt="..." class="card-img-top">
+              <img src="assets/img/illustrations/data fresh illustration.png" alt="..." class="card-img-top">
 
               <!-- Shape -->
               <div class="position-relative">
@@ -438,7 +438,7 @@
             <div class="card shadow-light-lg lift lift-lg">
               
               <!-- Image -->
-              <img src="Illustration_placement.png" alt="..." class="card-img-top">
+              <img src="assets/img/illustrations/Proxycurl API illustration.png" alt="..." class="card-img-top">
 
               <!-- Shape -->
               <div class="position-relative">
