--- a/linkdb-snapshots.html
+++ b/linkdb-snapshots.html
@@ -58,9 +58,11 @@
           <ul class="navbar-nav ml-auto">
 
             <li class="nav-item dropdown">
+              
               <a class="nav-link dropdown-toggle" id="navbarDocumentation" data-toggle="dropdown" href="#" aria-haspopup="true" aria-expanded="false">
                 Linkedin API <i class="fe fe-chevron-down"></i>
               </a>
+
               <div class="dropdown-menu dropdown-menu-md" aria-labelledby="navbarDocumentation">
                 <div class="list-group list-group-flush">
 
@@ -186,6 +188,69 @@
 
                 </div>
               </div>
+
+            </li>
+
+            <li class="nav-item dropdown">
+              
+              <a class="nav-link dropdown-toggle" id="navbarDocumentation" data-toggle="dropdown" href="#" aria-haspopup="true" aria-expanded="false">
+                Free Tools <i class="fe fe-chevron-down"></i>
+              </a>
+
+              <div class="dropdown-menu dropdown-menu-md" aria-labelledby="navbarDocumentation">
+                <div class="list-group list-group-flush">
+
+                  <a class="list-group-item" href="identify.html">
+
+                    <!-- Icon -->
+                    <div class="icon icon-sm text-primary">
+                      <i class="neu-search" style="font-size: 24px;"></i>
+                    </div>
+
+                    <!-- Content -->
+                    <div class="ml-4">
+
+                      <!-- Heading -->
+                      <h6 class="font-weight-bold text-uppercase text-primary mb-0">
+                        Decision Maker Finder
+                      </h6>
+
+                      <!-- Text -->
+                      <p class="font-size-sm text-gray-700 mb-0">
+                        Identify decision makers of prospect
+                      </p>
+
+                    </div>
+
+                  </a>
+
+                  <a class="list-group-item" href="https://nubela.co/blog/">
+
+                    <!-- Icon -->
+                    <div class="icon icon-sm text-primary">
+                      <i class="neu-info" style="font-size: 24px;"></i>
+                    </div>
+
+                    <!-- Content -->
+                    <div class="ml-4">
+
+                      <!-- Heading -->
+                      <h6 class="font-weight-bold text-uppercase text-primary mb-0">
+                        About this tool
+                      </h6>
+
+                      <!-- Text -->
+                      <p class="font-size-sm text-gray-700 mb-0">
+                        Learn more from our blog
+                      </p>
+
+                    </div>
+
+                  </a>                 
+
+                </div>
+              </div>
+
             </li>
 
             <li class="nav-item">
