--- a/jobs-linkedin-profile.html
+++ b/jobs-linkedin-profile.html
@@ -210,6 +210,41 @@
               </div>
             </li>
 
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" id="navbarDocumentation" data-toggle="dropdown" href="#" aria-haspopup="true" aria-expanded="false">
+                Free Tools <i class="fe fe-chevron-down"></i>
+              </a>
+              <div class="dropdown-menu dropdown-menu-md" aria-labelledby="navbarDocumentation">
+                <div class="list-group list-group-flush">
+                  
+                  <a class="list-group-item" href="identify.html" target="_blank">
+
+                    <!-- Icon -->
+                    <div class="icon icon-sm text-primary">
+                      <i class="neu-search" style="font-size: 24px;"></i>
+                    </div>
+
+                    <!-- Content -->
+                    <div class="ml-4">
+
+                      <!-- Heading -->
+                      <h6 class="font-weight-bold text-uppercase text-primary mb-0">
+                        Decision maker finder
+                      </h6>
+
+                      <!-- Text -->
+                      <p class="font-size-sm text-gray-700 mb-0">
+                        Identify decision makers of prospect
+                      </p>
+
+                    </div>
+
+                  </a>
+
+                </div>
+              </div>
+            </li>            
+
             <li class="nav-item">
               <a class="nav-link" id="navbarPages" href="pricing.html">
                 Pricing
@@ -232,7 +267,7 @@
         </div>
 
       </div>
-    </nav> 
+    </nav>
 
     <!-- WELCOME
     ================================================== -->
