--- a/email-finder.html
+++ b/email-finder.html
@@ -386,7 +386,7 @@
               <div class="img-skewed img-skewed-left">
 
                 <!-- Image -->
-                <img src="Illustration_landscape_placement.png" class="screenshot img-fluid img-skewed-item" alt="...">
+                <img src="assets/img/illustrations/email finder_second fold_illustration.png" class="screenshot img-fluid img-skewed-item" alt="...">
 
               </div>
 
