--- a/export.html
+++ b/export.html
@@ -47,7 +47,7 @@
           <ul class="navbar-nav ml-auto">
 
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="index.html">
+              <a class="nav-link dropdown-toggle" href="identify.html">
                 Identify
               </a>
             </li>
