--- a/jobs-linkedin-profile.html
+++ b/jobs-linkedin-profile.html
@@ -74,12 +74,12 @@
 
                       <!-- Heading -->
                       <h6 class="font-weight-bold text-uppercase text-primary mb-0">
-                        People Linkedin Profile
+                        Person Profile Endpoint
                       </h6>
 
                       <!-- Text -->
                       <p class="font-size-sm text-gray-700 mb-0">
-                        Crawl people information
+                        Scrape Linkedin Profiles
                       </p>
 
                     </div>
@@ -98,12 +98,12 @@
 
                       <!-- Heading -->
                       <h6 class="font-weight-bold text-uppercase text-primary mb-0">
-                        Company Linkedin Profile
+                        Company Profile Endpoint
                       </h6>
 
                       <!-- Text -->
                       <p class="font-size-sm text-gray-700 mb-0">
-                        Crawl company information
+                        Scrape Linkedin Companies
                       </p>
 
                     </div>
@@ -122,12 +122,12 @@
 
                       <!-- Heading -->
                       <h6 class="font-weight-bold text-uppercase text-primary mb-0">
-                        Jobs Linkedin Profile
+                        Job Profile Endpoint
                       </h6>
 
                       <!-- Text -->
                       <p class="font-size-sm text-gray-700 mb-0">
-                        Crawl jobs information
+                        Scrape Linkedin Jobs
                       </p>
 
                     </div>
@@ -921,7 +921,7 @@ response <span class="text-hl">=</span> requests.<span class="text-python-hl">ge
         
             <!-- Heading -->
             <h6 class="font-weight-bold text-uppercase text-gray-700">
-              Developer
+              API
             </h6>
 
             <!-- List -->
@@ -933,24 +933,29 @@ response <span class="text-hl">=</span> requests.<span class="text-python-hl">ge
               </li>
               <li class="mb-3">
                 <a href="people-linkedin-profile.html" class="text-reset">
-                  People Linkedin Profile
+                  Person Profile Endpoint
                 </a>
               </li>
               <li class="mb-3">
                 <a href="company-linkedin-profile.html" class="text-reset">
-                  Company Linkedin Profile
+                  Company Profile Endpoint
                 </a>
               </li>
               <li class="mb-3">
                 <a href="jobs-linkedin-profile.html" class="text-reset">
-                  Jobs Linkedin Profile
+                  Job Profile Endpoint
                 </a>
               </li>
               <li class="mb-3">
                 <a href="linkdb.html" class="text-reset">
                   LinkDB
                 </a>
-              </li>              
+              </li>
+              <li class="mb-3">
+                <a href="linkdb.html" class="text-reset">
+                  LinkDB Snapshots
+                </a>
+              </li>  
             </ul>
 
           </div>
@@ -966,6 +971,11 @@ response <span class="text-hl">=</span> requests.<span class="text-python-hl">ge
               <li class="mb-3">
                 <a href="https://nubela.co" class="text-reset">
                   Nubela Pte Ltd
+                </a>
+              </li>
+              <li class="mb-3">
+                <a href="https://nubela.co" class="text-reset">
+                  Other Projects by Nubela
                 </a>
               </li>
             </ul>
