--- a/email-finder.html
+++ b/email-finder.html
@@ -76,12 +76,12 @@
 
                       <!-- Heading -->
                       <h6 class="font-weight-bold text-uppercase text-primary mb-0">
-                        People Linkedin Profile
+                        Person Profile Endpoint
                       </h6>
 
                       <!-- Text -->
                       <p class="font-size-sm text-gray-700 mb-0">
-                        Crawl people information
+                        Scrape Linkedin Profiles
                       </p>
 
                     </div>
@@ -100,12 +100,12 @@
 
                       <!-- Heading -->
                       <h6 class="font-weight-bold text-uppercase text-primary mb-0">
-                        Company Linkedin Profile
+                        Company Profile Endpoint
                       </h6>
 
                       <!-- Text -->
                       <p class="font-size-sm text-gray-700 mb-0">
-                        Crawl company information
+                        Scrape Linkedin Companies
                       </p>
 
                     </div>
@@ -124,12 +124,12 @@
 
                       <!-- Heading -->
                       <h6 class="font-weight-bold text-uppercase text-primary mb-0">
-                        Jobs Linkedin Profile
+                        Job Profile Endpoint
                       </h6>
 
                       <!-- Text -->
                       <p class="font-size-sm text-gray-700 mb-0">
-                        Crawl jobs information
+                        Scrape Linkedin Jobs
                       </p>
 
                     </div>
@@ -525,7 +525,7 @@
         
             <!-- Heading -->
             <h6 class="font-weight-bold text-uppercase text-gray-700">
-              Developer
+              API
             </h6>
 
             <!-- List -->
@@ -537,24 +537,29 @@
               </li>
               <li class="mb-3">
                 <a href="people-linkedin-profile.html" class="text-reset">
-                  People Linkedin Profile
+                  Person Profile Endpoint
                 </a>
               </li>
               <li class="mb-3">
                 <a href="company-linkedin-profile.html" class="text-reset">
-                  Company Linkedin Profile
+                  Company Profile Endpoint
                 </a>
               </li>
               <li class="mb-3">
                 <a href="jobs-linkedin-profile.html" class="text-reset">
-                  Jobs Linkedin Profile
+                  Job Profile Endpoint
                 </a>
               </li>
               <li class="mb-3">
                 <a href="linkdb.html" class="text-reset">
                   LinkDB
                 </a>
-              </li>              
+              </li>
+              <li class="mb-3">
+                <a href="linkdb.html" class="text-reset">
+                  LinkDB Snapshots
+                </a>
+              </li>  
             </ul>
 
           </div>
@@ -570,6 +575,11 @@
               <li class="mb-3">
                 <a href="https://nubela.co" class="text-reset">
                   Nubela Pte Ltd
+                </a>
+              </li>
+              <li class="mb-3">
+                <a href="https://nubela.co" class="text-reset">
+                  Other Projects by Nubela
                 </a>
               </li>
             </ul>
@@ -593,15 +603,17 @@
 
           </div>
         </div> <!-- / .row -->
+        <br>
 
-        <hr class="mb-4">
+        <hr>
+        <br>
 
         <div class="text-center">
           <p class="caption">Nubela Pte Ltd. All rights reserved.</p>
         </div>
 
       </div> <!-- / .container -->
-    </footer>    
+    </footer>
 
     <!-- JAVASCRIPT
     ================================================== -->
