--- a/linkdb-snapshots.html
+++ b/linkdb-snapshots.html
@@ -279,7 +279,7 @@
           <div class="col-12 col-md-10 col-lg-7 text-center" data-aos="fade-up">
  
             <!-- Heading -->
-            <h1 class="display-2 font-weight-bold">
+            <h1 class="display-2 font-weight-bold" style="padding-top: 64px;">
               LinkDB Snapshots
             </h1>
 
@@ -358,9 +358,7 @@
 
                 <!-- Heading -->
                 <h3 class="font-weight-bold">
-                  Companies <span class="badge badge-pill badge-info-soft">
-                  <span class="h6 text-uppercase">Coming Q1 2021</span>
-                  </span>
+                  Companies
                 </h3>                
 
                 <!-- Item -->
@@ -387,8 +385,8 @@
         <!-- CTA -->
         <div class="row justify-content-center mt-6">
 
-          <button class="btn btn-primary shadow-light-lg mr-4">Contact us for sales</button>
-          <button class="btn btn-primary-soft shadow-light-lg">What is LinkDB?</button>
+          <button class="btn btn-primary shadow-light-lg mr-lg-4 mb-2">Contact us for sales</button>
+          <button class="btn btn-primary-soft shadow-light-lg mb-2">What is LinkDB?</button>
 
 
         </div> <!-- Row -->  
