--- a/pricing.html
+++ b/pricing.html
@@ -307,7 +307,7 @@
         <div class="row">
 
           <!--Lite-->
-          <div class="col-12 col-md-3 py-6">
+          <div class="col-12 col-lg-3 col-md-6 py-6">
 
                 <!-- Preheading -->
                 <div class="mb-3">
@@ -396,7 +396,7 @@
           </div>        
 
           <!--Startup-->
-          <div class="col-12 col-md-3 py-6">
+          <div class="col-12 col-lg-3 col-md-6 py-6">
 
             <div class="card-body bg-primary rounded">
 
@@ -488,7 +488,7 @@
           </div>
 
           <!--Enterprise-->
-          <div class="col-12 col-md-3 py-6">
+          <div class="col-12 col-lg-3 col-md-6 py-6">
 
             <!-- Preheading -->
             <div class="mb-3">
@@ -592,7 +592,7 @@
           </div>
 
           <!--XL-->
-          <div class="col-12 col-md-3 py-6">
+          <div class="col-12 col-lg-3 col-md-6 py-6">
 
             <!-- Preheading -->
             <div class="mb-3">
