--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
   <body class="pt-10">
 
-    <!-- NAVBAR
+     <!-- NAVBAR
     ================================================== -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top bg-white border-bottom">
       <div class="container-fluid">
@@ -183,7 +183,7 @@
 
                   </a> 
                   
-                  <a class="list-group-item" href="email-finder.html">
+                  <a class="list-group-item" href="linkedin-profile-email-enrichment.html">
 
                     <!-- Icon -->
                     <div class="icon icon-sm text-primary">
@@ -195,7 +195,7 @@
 
                       <!-- Heading -->
                       <h6 class="font-weight-bold text-uppercase text-primary mb-0">
-                        Email Finder
+                        Linkedin Profile Email Enrichment
                       </h6>
 
                       <!-- Text -->
