--- a/linkdb-snapshots.html
+++ b/linkdb-snapshots.html
@@ -31,7 +31,7 @@
 
   <body>
 
-    <!-- NAVBAR
+     <!-- NAVBAR
     ================================================== -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top bg-white border-bottom">
       <div class="container-fluid">
@@ -184,7 +184,7 @@
 
                   </a> 
                   
-                  <a class="list-group-item" href="email-finder.html">
+                  <a class="list-group-item" href="linkedin-profile-email-enrichment.html">
 
                     <!-- Icon -->
                     <div class="icon icon-sm text-primary">
@@ -196,7 +196,7 @@
 
                       <!-- Heading -->
                       <h6 class="font-weight-bold text-uppercase text-primary mb-0">
-                        Email Finder
+                        Linkedin Profile Email Enrichment
                       </h6>
 
                       <!-- Text -->
