--- a/people-linkedin-profile.html
+++ b/people-linkedin-profile.html
@@ -29,7 +29,7 @@
   </head>
   <body class="pt-10">
 
-    <!-- NAVBAR
+     <!-- NAVBAR
     ================================================== -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top bg-white border-bottom">
       <div class="container-fluid">
@@ -182,7 +182,7 @@
 
                   </a> 
                   
-                  <a class="list-group-item" href="email-finder.html">
+                  <a class="list-group-item" href="linkedin-profile-email-enrichment.html">
 
                     <!-- Icon -->
                     <div class="icon icon-sm text-primary">
@@ -194,7 +194,7 @@
 
                       <!-- Heading -->
                       <h6 class="font-weight-bold text-uppercase text-primary mb-0">
-                        Email Finder
+                        Linkedin Profile Email Enrichment
                       </h6>
 
                       <!-- Text -->
@@ -268,7 +268,6 @@
 
       </div>
     </nav>
-
 
     <!-- WELCOME
     ================================================== -->
