--- a/linkdb.html
+++ b/linkdb.html
@@ -856,10 +856,15 @@ AND parsed_data @> '{"experiences": [{"ends_at": null, "company": "Electronic Ar
                 </a>
               </li>
               <li class="mb-3">
-                <a href="linkdb.html" class="text-reset">
+                <a href="linkdb-snapshots.html" class="text-reset">
                   LinkDB Snapshots
                 </a>
-              </li>  
+              </li> 
+              <li class="mb-3">
+                <a href="linkedin-profile-email-enrichment.html" class="text-reset">
+                  Linkedin Profile Email Enrichment
+                </a>
+              </li> 
             </ul>
 
           </div>
