--- a/company-linkedin-profile.html
+++ b/company-linkedin-profile.html
@@ -1100,10 +1100,15 @@ response <span class="text-hl">=</span> requests.<span class="text-python-hl">ge
                 </a>
               </li>
               <li class="mb-3">
-                <a href="linkdb.html" class="text-reset">
+                <a href="linkdb-snapshots.html" class="text-reset">
                   LinkDB Snapshots
                 </a>
-              </li>  
+              </li> 
+              <li class="mb-3">
+                <a href="linkedin-profile-email-enrichment.html" class="text-reset">
+                  Linkedin Profile Email Enrichment
+                </a>
+              </li> 
             </ul>
 
           </div>
