--- a/pricing.html
+++ b/pricing.html
@@ -1091,10 +1091,15 @@
                 </a>
               </li>
               <li class="mb-3">
-                <a href="linkdb.html" class="text-reset">
+                <a href="linkdb-snapshots.html" class="text-reset">
                   LinkDB Snapshots
                 </a>
-              </li>  
+              </li> 
+              <li class="mb-3">
+                <a href="linkedin-profile-email-enrichment.html" class="text-reset">
+                  Linkedin Profile Email Enrichment
+                </a>
+              </li> 
             </ul>
 
           </div>
