--- a/linkedin-profile-email-enrichment.html
+++ b/linkedin-profile-email-enrichment.html
@@ -342,9 +342,9 @@
               <div class="card-body position-relative">
 
                 <!-- Text -->
-                <p class="text-center text-muted font-size-sm">
+                <h5 class="text-center font-weight-bold">
                   Developer submits a list of Linkedin profile URLs
-                </p>
+                </h5>
 
               </div>
 
@@ -364,9 +364,9 @@
               <div class="card-body position-relative">
 
                 <!-- Text -->
-                <p class="text-center text-muted font-size-sm">
+                <h5 class="text-center font-weight-bold">
                   Our system will process it
-                </p>
+                </h5>
 
               </div>
 
@@ -386,9 +386,9 @@
               <div class="card-body position-relative">
 
                 <!-- Text -->
-                <p class="text-center text-muted font-size-sm">
+                <h5 class="text-center font-weight-bold">
                   Once it is ready, you will receive a notification via a webhook
-                </p>
+                </h5>
 
               </div>
 
@@ -408,9 +408,9 @@
               <div class="card-body position-relative">
 
                 <!-- Text -->
-                <p class="text-center text-muted font-size-sm">
+                <h5 class="text-center font-weight-bold">
                   You can download the results matching profiles to email addresses
-                </p>
+                </h5>
 
               </div>
 
