--- a/bagikuota.html
+++ b/bagikuota.html
@@ -188,7 +188,7 @@
           <div class="col-12 col-md-6 order-md-2">
             
             <!-- Image -->
-            <img src="Illustration_landscape_placement.png" alt="..." class="img-fluid mb-6 mb-md-0">
+            <img src="assets/img/illustrations/rewarding illustration.png" alt="..." class="img-fluid mb-6 mb-md-0">
 
           </div>
           <div class="col-12 col-md-6 order-md-1">
