--- a/bagikuota.html
+++ b/bagikuota.html
@@ -150,32 +150,20 @@
         <div class="row justify-content-center">
 
           <div class="col-12">
-            <h1 class="display-3 text-center mb-8">30 days reward</h1>
+            <h1 class="display-3 text-center mb-6">30 days reward</h1>
 
-            <div class="progress">
-              <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-              <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-              <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
+            <div class="col-12 mb-4">
+              <div class="img img-fluid rounded mb-4">
+                <img src="assets/img/illustrations/Timeline.png">
+              </div>
+            </figure>
           </div>
+
+          <p class="text-center text-muted">
+            Sign up and get 2.75GB and then 2GB / 7 day <br>
+          </p>          
 
         </div> <!-- / .row -->
-
-        <div class="row justify-content-center mt-4">
-
-          <div class="col-12 col-md-4">
-            <p class="">First 500mb bonus after 3 days from installation (Day 3)</p>
-          </div>
-
-          <div class="col-12 col-md-4">
-            <p class="">1GB data every 2 weeks (Day 14)</p>
-          </div>
-          
-          <div class="col-12 col-md-4">
-            <p class="">1GB data every 2 weeks (Day 28)</p>
-          </div>          
-
-        </div>
 
       </div> <!-- / .container -->
     </section>
