--- a/bagikuota.html
+++ b/bagikuota.html
@@ -42,17 +42,17 @@
           <div class="col-12 col-md-10 col-lg-8 text-center">
             
             <h6 class="text-uppercase font-weight-bold text-white">
-              Limited to first 2000 installs only
+              Tersedia hanya untuk 2000 install saja
             </h6>
 
             <!-- Heading -->
             <h1 class="display-2 font-weight-bold text-white">
-              Get 2GB data quota top up every month
+              Dapatkan 2GB kuota gratis setiap bulan
             </h1>
 
             <!-- Text -->
             <p class="lead text-white mb-8">
-              Why? Run out app and help us crawl the web like Google (to power Proxycurl)
+              Kok bisa? Jalankan aplikasi dan bantu kami crawl website seperti Google (untuk membantu Proxycurl)
             </p>
 
             <!-- Button -->
@@ -62,7 +62,7 @@
 
             <!-- Button -->
             <a href="#!" class="btn btn-white-soft shadow lift mb-4">
-              Join Whatsapp Group
+              Gabung Grup Whatsapp
             </a>
 
           </div>
@@ -89,7 +89,7 @@
 
             <!-- Heading -->
             <h1 class="font-weight-bold pb-6 mb-6 text-center">
-              How to install BagiKuota App
+              Bagaimana cara install BagiKuota App
             </h1>           
 
           </div>
@@ -110,10 +110,10 @@
                 <!-- Text -->
                 <p class="text-center">
                   <span class="badge badge-pill badge-primary-soft mb-3">
-                    <span class="h6 text-uppercase">Step 1</span>
+                    <span class="h6 text-uppercase">Langkah pertama</span>
                   </span>
                   <br>
-                  Download the APK you want to install
+                  Download BagiKuota apk yang akan diinstall
                 </p>
 
               </div>
@@ -136,10 +136,10 @@
                 <!-- Text -->
                 <p class="text-center">
                   <span class="badge badge-pill badge-primary-soft mb-3">
-                    <span class="h6 text-uppercase">Step 2</span>
+                    <span class="h6 text-uppercase">Langkah kedua</span>
                   </span>
-                  <br>                  
-                  Navigate to your phone settings menu then to the security settings. Enable the Install from Unknown Sources option
+                  <br>
+                  Masuk ke settingan smartphone kamu, kemudian arahkan ke pengaturan keamanan. Ijinkan install aplikasi dari "Sumber Tidak Dikenal"
                 </p>
 
               </div>
@@ -162,10 +162,10 @@
                 <!-- Text -->
                 <p class="text-center">
                   <span class="badge badge-pill badge-primary-soft mb-3">
-                    <span class="h6 text-uppercase">Step 3</span>
+                    <span class="h6 text-uppercase">Langkah ketiga</span>
                   </span>
                   <br>
-                  Use a file browser and navigate to your download folder
+                  Gunakan berkas dari browser dan arahkan ke folder download
                 </p>
 
               </div>
@@ -188,10 +188,10 @@
                 <!-- Text -->
                 <p class="text-center">
                   <span class="badge badge-pill badge-primary-soft mb-3">
-                    <span class="h6 text-uppercase">Step 4</span>
+                    <span class="h6 text-uppercase">Langkah terakhir</span>
                   </span>
                   <br>
-                  The app should safely install
+                  Aplikasi siap untuk dijalankan
                 </p>
 
               </div>
@@ -219,7 +219,7 @@
         <div class="row justify-content-center">
 
           <div class="col-12">
-            <h1 class="display-3 text-center mb-6">30 days reward</h1>
+            <h1 class="display-3 text-center mb-6">Dapatkan kuota gratis setiap 30 hari</h1>
 
             <div class="col-12 mb-4">
               <div class="img img-fluid rounded mb-4">
@@ -229,14 +229,14 @@
           </div>
 
           <p class="text-center text-muted">
-            Sign up and get 2.75GB and then 2GB / 7 day <br>
+            Daftar sekarang dan dapatkan 2.75GB, kemudian 2GB / 7 hari <br>
           </p>          
 
         </div> <!-- / .row -->
 
             <!-- Button -->
             <a href="#!" class="btn btn-primary shadow lift mt-4">
-              Join Whatsapp Group
+              Gabung Grup Whatsapp
             </a>        
 
       </div> <!-- / .container -->
@@ -257,22 +257,22 @@
             
             <!-- Badge -->
             <span class="badge badge-pill badge-primary-soft mb-3">
-              <span class="h6 text-uppercase">LIMITED TO FIRST 2000 INSTALLS ONLY</span>
+              <span class="h6 text-uppercase">TERSEDIA HANYA UNTUK 2000 INSTALL SAJA</span>
             </span>
 
             <!-- Heading -->
             <h2>
-              Why are we <br>
-              <span class="text-primary">rewarding free top ups?</span>
+              Mengapa kami mau untuk<br>
+              <span class="text-primary">memberikan kuota gratis secara cuma-cuma?</span>
             </h2>
 
             <!-- Text -->
             <p class="font-size-lg text-gray-700 mb-4">
-              When you run the app, you help power our Proxycurl service which help businesses crawl Linkedin accounts. We share profit with you by paying for your top-ups.
+              Ketika kamu menjalankan BagiKuota app, kamu membantu kami menjalankan Proxycurl yang mana membantu perusahaan untuk crawling akun-akun yang ada di Linkedin. Kami membagi keuntungan yang kami peroleh dengan memberikan kuota gratis kepada kamu.
             </p>
 
             <p class="font-size-lg text-muted mb-6 mb-md-6">
-              What are you waiting for?
+              Apalagi yang kamu tunggu?
             </p>
 
             <!-- Button -->
@@ -282,7 +282,7 @@
 
             <!-- Button -->
             <a href="#!" class="btn btn-primary-soft lift mb-4">
-              Join Whatsapp Group
+              Gabung Grup Whatsapp
             </a>            
 
           </div>
