--- a/bagikuota.html
+++ b/bagikuota.html
@@ -38,7 +38,13 @@
 
       <!-- Content -->
       <div class="container">
-        <div class="row justify-content-center">
+        <div class="row justify-content-center">    
+
+            <div class="col-12 text-center">
+              <img src="assets/img/illustrations/BagiKuota_Logo horizontal_White.svg"
+              alt="BagiKuota_Logo" class="mb-8 d-inline-block mx-auto" style="width: 144px; height: auto;">
+            </div>
+
           <div class="col-12 col-md-10 col-lg-8 text-center">
             
             <h6 class="text-uppercase font-weight-bold text-white">
@@ -88,7 +94,7 @@
           <div class="col-12 col-md-10 col-lg-8" data-aos="fade-up">
 
             <!-- Heading -->
-            <h1 class="font-weight-bold pb-6 mb-6 text-center">
+            <h1 class="display-3 text-center">
               Bagaimana cara install BagiKuota App
             </h1>           
 
@@ -225,7 +231,7 @@
               <div class="img img-fluid rounded mb-4">
                 <img src="assets/img/illustrations/Timeline.png">
               </div>
-            </figure>
+            </div>
           </div>
 
           <p class="text-center text-muted">
