--- a/bagikuota.html
+++ b/bagikuota.html
@@ -38,7 +38,7 @@
 
       <!-- Content -->
       <div class="container">
-        <div class="row justify-content-center">    
+        <div class="row justify-content-center">          
 
             <div class="col-12 text-center">
               <img src="assets/img/illustrations/BagiKuota_Logo horizontal_White.svg"
@@ -60,6 +60,13 @@
             <p class="lead text-white mb-8">
               Kok bisa? Jalankan aplikasi dan bantu kami crawl website seperti Google (untuk membantu Proxycurl)
             </p>
+
+            <div class="col-12 text-center">
+
+              <!-- Image -->
+              <img src="./assets/img/BagiKuota SS/Index screen_Login_Completed.png" alt="BagiKuota app" class="screenshot img-fluid mb-6" style="width: 50%; height: auto;">         
+  
+            </div>            
 
             <!-- Button -->
             <a href="#!" class="btn btn-white shadow lift mr-lg-4 mb-4">
@@ -91,7 +98,7 @@
       <div class="container">  
 
         <div class="row justify-content-center">
-          <div class="col-12 col-md-10 col-lg-8" data-aos="fade-up">
+          <div class="col-12" data-aos="fade-up">
 
             <!-- Heading -->
             <h1 class="display-3 text-center">
@@ -236,14 +243,18 @@
 
           <p class="text-center text-muted">
             Daftar sekarang dan dapatkan 2.75GB, kemudian 2GB / 7 hari <br>
-          </p>          
+          </p>
 
-        </div> <!-- / .row -->
+          <div class="col-12 col-md-10 col-lg-8 text-center">
 
-            <!-- Button -->
-            <a href="#!" class="btn btn-primary shadow lift mt-4">
-              Gabung Grup Whatsapp
-            </a>        
+          <!-- Button -->
+          <a href="#!" class="btn btn-primary shadow lift mt-4">
+            Gabung Grup Whatsapp
+          </a>
+
+          </div>
+
+        </div> <!-- / .row -->        
 
       </div> <!-- / .container -->
     </section>
@@ -259,7 +270,7 @@
             <img src="assets/img/illustrations/rewarding illustration.png" alt="..." class="img-fluid mb-6 mb-md-0">
 
           </div>
-          <div class="col-12 col-md-6 order-md-1">
+          <div class="col-12 col-md-6">
             
             <!-- Badge -->
             <span class="badge badge-pill badge-primary-soft mb-3">
