--- a/bagikuota.html
+++ b/bagikuota.html
@@ -305,7 +305,26 @@
           </div>
         </div> <!-- / .row -->
       </div> <!-- / .container -->
-    </section>    
+    </section>
+
+    <!--FOOTER-->
+    <footer class="py-8 py-md-11 bg-gray-200">
+      <div class="container text-center text-md-left">
+      <div class="row">
+      <div class="col md-y mt-md-0 mt-3">
+      <h5 class="font-weight-bold">Nubela Pte ltd</h5>
+      <small class="navbar-footer-sub">6 Harper Road #02-07 Singapore 369674</small>
+      </div>
+      <div class="col-md-6 mb-md-0 mb-3 justify-content-center justify-content-md-end d-flex">
+      <ul class="nav">
+      <li class="nav-item">
+      <a class="font-weight-bold" href="mailto:hello@nubela.co">Email us</a>
+      </li>
+      </ul>
+      </div>
+      </div>
+      </div>
+    </footer>    
 
     <!-- JAVASCRIPT
     ================================================== -->
