--- a/bagikuota.html
+++ b/bagikuota.html
@@ -27,6 +27,47 @@
 
   </head>
   <body>
+
+     <!-- NAVBAR
+    ================================================== -->
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top bg-white border-bottom">
+      <div class="container">
+
+        <!-- Brand -->
+        <a class="navbar-brand" href="bagikuota.html">
+          <img src="./assets/img/BagiKuota_Logo horizontal.png" class="navbar-brand-img" alt="proxycurl logo">
+        </a>
+
+        <!-- Collapse -->
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+
+          <!-- Toggler -->
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+            <i class="fe fe-x"></i>
+          </button>
+
+          <!-- Navigation -->
+          <ul class="navbar-nav ml-auto">           
+
+            <li class="nav-item">
+              <a class="nav-link" id="navbarPages" href="bagikuota-faq.html">
+                FAQ
+              </a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" id="navbarAccount" href="#!">
+                Rewards
+              </a>
+            </li>
+
+          </ul>
+
+        </div>
+
+      </div>
+    </nav>    
+
     <!-- WELCOME
     ================================================== -->
     <section class="py-10 py-md-14 bg-primary" id="welcome">
@@ -58,7 +99,7 @@
 
             <!-- Text -->
             <p class="lead text-white mb-8">
-              Kok bisa? Jalankan aplikasi dan bantu kami crawl website seperti Google (untuk membantu Proxycurl)
+              Kok bisa? Jalankan aplikasi dan bantu kami crawl website seperti Google
             </p>
 
             <div class="col-12 text-center">
@@ -285,7 +326,7 @@
 
             <!-- Text -->
             <p class="font-size-lg text-gray-700 mb-4">
-              Ketika kamu menjalankan BagiKuota app, kamu membantu kami menjalankan Proxycurl yang mana membantu perusahaan untuk crawling akun-akun yang ada di Linkedin. Kami membagi keuntungan yang kami peroleh dengan memberikan kuota gratis kepada kamu.
+              Ketika kamu menjalankan BagiKuota app, kamu membantu kami untuk crawling akun-akun yang ada di Linkedin. Kami membagi keuntungan yang kami peroleh dengan memberikan kuota gratis kepada kamu.
             </p>
 
             <p class="font-size-lg text-muted mb-6 mb-md-6">
@@ -305,26 +346,7 @@
           </div>
         </div> <!-- / .row -->
       </div> <!-- / .container -->
-    </section>
-
-    <!--FOOTER-->
-    <footer class="py-8 py-md-11 bg-gray-200">
-      <div class="container text-center text-md-left">
-      <div class="row">
-      <div class="col md-y mt-md-0 mt-3">
-      <h5 class="font-weight-bold">Nubela Pte ltd</h5>
-      <small class="navbar-footer-sub">6 Harper Road #02-07 Singapore 369674</small>
-      </div>
-      <div class="col-md-6 mb-md-0 mb-3 justify-content-center justify-content-md-end d-flex">
-      <ul class="nav">
-      <li class="nav-item">
-      <a class="font-weight-bold" href="mailto:hello@nubela.co">Email us</a>
-      </li>
-      </ul>
-      </div>
-      </div>
-      </div>
-    </footer>    
+    </section>  
 
     <!-- JAVASCRIPT
     ================================================== -->
