--- a/bagikuota.html
+++ b/bagikuota.html
@@ -56,7 +56,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" id="navbarAccount" href="#!">
+              <a class="nav-link" id="navbarAccount" href="bagikuota-reward.html">
                 Rewards
               </a>
             </li>
@@ -346,7 +346,45 @@
           </div>
         </div> <!-- / .row -->
       </div> <!-- / .container -->
-    </section>  
+    </section>
+
+    <!-- FOOTER
+    ================================================== -->    
+    <footer class="py-8 py-md-11 bg-dark border-top border-gray-800-50">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-md-4 col-lg-6">
+      
+            <!-- Brand -->
+            <img style="width: 128px; height: auto;" src="assets/img//BagiKuota_Logo horizontal_White.png" alt="bagikuota logo" class="img-fluid mb-2">
+
+            <!-- Text -->
+            <p class="text-gray-700 mb-2">
+              Bagikuota, an offering by Sapiengraph Inc
+            </p>
+
+          </div>
+          <div class="col-6 col-md-4 col-lg-6 text-right">
+
+            <!-- List -->
+            <ul class="list-unstyled text-muted mb-6 mb-md-8 mb-lg-0">
+              <li class="mb-3">
+                <a href="bagikuota-faq.html" class="text-reset">
+                  FAQ
+                </a>
+              </li>
+              <li class="mb-3">
+                <a href="bagikuota-reward.html" class="text-reset">
+                  Rewards
+                </a>
+              </li>
+            </ul>
+
+          </div>
+
+        </div> <!-- / .row -->
+      </div> <!-- / .container -->
+    </footer>     
 
     <!-- JAVASCRIPT
     ================================================== -->
