--- a/bagikuota-faq.html
+++ b/bagikuota-faq.html
@@ -268,11 +268,6 @@
 
           </div>
           <div class="col-6 col-md-4 col-lg-6 text-right">
-      
-            <!-- Heading -->
-            <h6 class="font-weight-bold text-uppercase text-gray-700">
-              General
-            </h6>
 
             <!-- List -->
             <ul class="list-unstyled text-muted mb-6 mb-md-8 mb-lg-0">
@@ -283,7 +278,7 @@
               </li>
               <li class="mb-3">
                 <a href="bagikuota-reward.html" class="text-reset">
-                  Reward
+                  Rewards
                 </a>
               </li>
             </ul>
