--- a/bagikuota.html
+++ b/bagikuota.html
@@ -30,7 +30,7 @@
 
      <!-- NAVBAR
     ================================================== -->
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top bg-white border-bottom">
+    <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom">
       <div class="container">
 
         <!-- Brand -->
