--- a/bagikuota-faq.html
+++ b/bagikuota-faq.html
@@ -50,6 +50,12 @@
           <ul class="navbar-nav ml-auto">           
 
             <li class="nav-item">
+              <a class="nav-link" id="navbarPages" href="agenbagi.html">
+                AgenBagi
+              </a>
+            </li>
+
+            <li class="nav-item">
               <a class="nav-link" id="navbarPages" href="bagikuota-faq.html">
                 FAQ
               </a>
@@ -66,7 +72,7 @@
         </div>
 
       </div>
-    </nav>
+    </nav> 
 
     <!-- CONTENT
     ================================================== -->
@@ -271,6 +277,11 @@
 
             <!-- List -->
             <ul class="list-unstyled text-muted mb-6 mb-md-8 mb-lg-0">
+              <li class="mb-3">
+                <a href="agenbagi.html" class="text-reset">
+                  AgenBagi
+                </a>
+              </li>              
               <li class="mb-3">
                 <a href="bagikuota-faq.html" class="text-reset">
                   FAQ
