--- a/agenbagi.html
+++ b/agenbagi.html
@@ -82,7 +82,7 @@
           <div class="col-10 col-sm-8 col-md-6 order-md-2">
             
             <div class="device device-macbook">
-              <img src="Illustration_landscape_placement.png" class="device-screen" alt="...">
+              <img src="assets/img/illustrations/chrome extension illustration.png" class="device-screen" alt="...">
               <img src="assets/img/devices/macbook.svg" class="img-fluid" alt="...">
             </div>
 
@@ -116,7 +116,7 @@
           <div class="col-12 col-md-6 order-md-2">
             
             <!-- Image -->
-            <img src="Illustration_landscape_placement.png" alt="..." class="img-fluid mb-6 mb-md-0">
+            <img src="assets/img/illustrations/monthly earning illustration.png" alt="..." class="img-fluid mb-6 mb-md-0">
 
           </div>
           <div class="col-12 col-md-6 order-md-1">
