--- a/agenbagi-user-dashboard.html
+++ b/agenbagi-user-dashboard.html
@@ -80,12 +80,12 @@
                   <!-- List -->
                   <ul class="card-list list text-gray-700">
                     <li class="list-item active">
-                      <a class="list-link text-reset" href="account-general.html">
+                      <a class="list-link text-reset" href="agenbagi-user-dashboard.html">
                         Reports
                       </a>
                     </li>
                     <li class="list-item">
-                      <a class="list-link text-reset" href="#!">
+                      <a class="list-link text-reset" href="agenbagi-user-dashboard-extension-tutorial.html">
                         How to install Chrome extension
                       </a>
                     </li>
