--- a/agenbagi-admin-dashboard.html
+++ b/agenbagi-admin-dashboard.html
@@ -128,8 +128,13 @@
                   <!-- List -->
                   <ul class="card-list list text-gray-700">
                     <li class="list-item active">
-                      <a class="list-link text-reset" href="account-general.html">
+                      <a class="list-link text-reset" href="agenbagi-admin-dashboard.html">
                         Reports
+                      </a>
+                    </li>
+                    <li class="list-item">
+                      <a class="list-link text-reset" href="agenbagi-admin-dashboard-comparison copy.html">
+                        Agens comparison
                       </a>
                     </li>
                   </ul>
