--- a/agenbagi-user-dashboard.html
+++ b/agenbagi-user-dashboard.html
@@ -89,6 +89,11 @@
                         How to install Chrome extension
                       </a>
                     </li>
+                    <li class="list-item">
+                      <a class="list-link text-reset" href="agenbagi-dashboard-comparison.html">
+                        Agens comparison
+                      </a>
+                    </li>                     
                   </ul>
 
                 </div>
