--- a/agenbagi-admin-dashboard-comparison.html
+++ b/agenbagi-admin-dashboard-comparison.html
@@ -134,7 +134,7 @@
                       </a>
                     </li>
                     <li class="list-item active">
-                      <a class="list-link text-reset" href="agenbagi-admin-dashboard-comparison copy.html">
+                      <a class="list-link text-reset" href="agenbagi-admin-dashboard-comparison.html">
                         Agens comparison
                       </a>
                     </li>
