--- a/agenbagi-admin-dashboard.html
+++ b/agenbagi-admin-dashboard.html
@@ -133,7 +133,7 @@
                       </a>
                     </li>
                     <li class="list-item">
-                      <a class="list-link text-reset" href="agenbagi-admin-dashboard-comparison copy.html">
+                      <a class="list-link text-reset" href="agenbagi-admin-dashboard-comparison.html">
                         Agens comparison
                       </a>
                     </li>
