--- a/agenbagi.html
+++ b/agenbagi.html
@@ -35,7 +35,7 @@
 
         <!-- Brand -->
         <a class="navbar-brand" href="bagikuota.html">
-          <img src="./assets/img/BagiKuota_Logo horizontal.png" class="navbar-brand-img" alt="proxycurl logo">
+          <img src="./assets/img/AgenBagi_Logo horizontal.png" class="navbar-brand-img" alt="proxycurl logo">
         </a>
 
         <!-- Collapse -->
@@ -50,8 +50,8 @@
           <ul class="navbar-nav ml-auto">           
 
             <li class="nav-item">
-              <a class="nav-link" id="navbarPages" href="agenbagi.html">
-                AgenBagi
+              <a class="nav-link" id="navbarPages" href="bagikuota.html">
+                BagiKuota
               </a>
             </li>
 
@@ -245,11 +245,11 @@
           <div class="col-12 col-md-4 col-lg-6">
       
             <!-- Brand -->
-            <img style="width: 128px; height: auto;" src="assets/img//BagiKuota_Logo horizontal_White.png" alt="bagikuota logo" class="img-fluid mb-2">
+            <img style="width: 128px; height: auto;" src="assets/img/AgenBagi_Logo horizontal_White.png" alt="bagikuota logo" class="img-fluid mb-2">
 
             <!-- Text -->
             <p class="text-gray-700 mb-2">
-              Bagikuota, an offering by Sapiengraph Inc
+              AgenBagi, an offering by Sapiengraph Inc
             </p>
 
           </div>
@@ -258,8 +258,8 @@
             <!-- List -->
             <ul class="list-unstyled text-muted mb-6 mb-md-8 mb-lg-0">
               <li class="mb-3">
-                <a href="agenbagi.html" class="text-reset">
-                  AgenBagi
+                <a href="bagikuota.html" class="text-reset">
+                  BagiKuota
                 </a>
               </li>              
               <li class="mb-3">
