--- a/agenbagi.html
+++ b/agenbagi.html
@@ -34,7 +34,7 @@
       <div class="container">
 
         <!-- Brand -->
-        <a class="navbar-brand" href="bagikuota.html">
+        <a class="navbar-brand" href="agenbagi.html">
           <img src="./assets/img/AgenBagi_Logo horizontal.png" class="navbar-brand-img" alt="proxycurl logo">
         </a>
 
